Se agregó información sobre el fundador y Día de la tierra en difernetes artículos y se cambió el tipo de información de la compañia meta

--- a/Maquetado.html
+++ b/Maquetado.html
@@ -13,16 +13,19 @@
         <h1>Compañía Meta</h1>
         <article>
             <h2>Antes Facebook</h2>
-            <p> Meta Platforms, Inc.​​​, cuyo nombre comercial es Meta, es un conglomerado estadounidense de tecnología y redes sociales con sede en Menlo Park, California.</p>
+            <p>  Meta Platforms, Inc. (anteriormente conocido como Facebook, Inc.), cuyo nombre comercial es Meta, es un conglomerado estadounidense de tecnología y redes sociales con sede en Menlo Park, California. Es la empresa matriz de Facebook, Instagram, WhatsApp y otras subsidiarias, productos y servicios, incluidos Facebook Messenger, Facebook Watch y Facebook Portal. También ha adquirido Oculus VR, Giphy y Mapillary, y tiene una participación del 9,9 % en Jio Platforms. La principal vía de ingresos de la empresa es a través de la venta de anuncios a sus comercializadores</p>
         </article>
         <article>
             <h2>Fundador</h2>
+            <p>Mark Zuckerberg</p>
+            <p>programador y empresario estadounidense, uno de los creadores y fundadores de Facebook y la red social homónima, y su actual presidente.</p>
         </article>
     </section>
     <section>
         <h1>Noticias</h1>
         <article>
             <h2>Día de la Tierra</h2>
+            <p>Meta está llevando a cabo una serie de iniciativas relacionadas con la protección del medio ambiente y lucha contra el cambio climático, enmarcadas en la celebración del Día de la Tierra, que tendrá lugar este próximo viernes 22 de abril. Destaca la expansión de su función de donaciones a organizaciones sin ánimo de lucro, que desde ahora también se encontrará disponible para Reels, su propio rival a TikTok, en Instagram.</p>
         </article>
     </section>
     <footer></footer>
