--- a/Maquetado.html
+++ b/Maquetado.html
@@ -13,11 +13,11 @@
         <h1>Compañía Meta</h1>
         <article>
             <h2>Antes Facebook</h2>
-            <p>  Meta Platforms, Inc. (anteriormente conocido como Facebook, Inc.), cuyo nombre comercial es Meta, es un conglomerado estadounidense de tecnología y redes sociales con sede en Menlo Park, California. Es la empresa matriz de Facebook, Instagram, WhatsApp y otras subsidiarias, productos y servicios, incluidos Facebook Messenger, Facebook Watch y Facebook Portal. También ha adquirido Oculus VR, Giphy y Mapillary, y tiene una participación del 9,9 % en Jio Platforms. La principal vía de ingresos de la empresa es a través de la venta de anuncios a sus comercializadores</p>
+            <p>Meta Platforms, Inc. (anteriormente conocido como Facebook, Inc.), cuyo nombre comercial es Meta, es un conglomerado estadounidense de tecnología y redes sociales con sede en Menlo Park, California. Es la empresa matriz de Facebook, Instagram, WhatsApp y otras subsidiarias, productos y servicios, incluidos Facebook Messenger, Facebook Watch y Facebook Portal. También ha adquirido Oculus VR, Giphy y Mapillary, y tiene una participación del 9,9 % en Jio Platforms. La principal vía de ingresos de la empresa es a través de la venta de anuncios a sus comercializadores</p>
         </article>
         <article>
             <h2>Fundador</h2>
-            <p>Mark Zuckerberg</p>
+            <i>Mark Zuckerberg</i>
             <p>programador y empresario estadounidense, uno de los creadores y fundadores de Facebook y la red social homónima, y su actual presidente.</p>
         </article>
     </section>
